Feat: Добавлен auth_service для авторизациии регистрации доступ к некоторым функциям по токену авторизации сервис собран включён в докер композ

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,8 +11,22 @@ services:
       - db
       - order_service
       - notifications
+      - auth_service
     env_file:
       - main_service/.env
+    networks:
+      - backend
+
+  auth_service:
+    build:
+      context: ./auth_service
+      dockerfile: Dockerfile
+    ports:
+      - "50053:50053"
+    depends_on:
+      - db
+    env_file:
+      - auth_service/.env
     networks:
       - backend
 
